--- a/balancebrewtea.html
+++ b/balancebrewtea.html
@@ -6,7 +6,7 @@
   <title>HERBONIC</title>
   <link rel="icon" type="image/x-icon" href="im/1.jpg">
   <link rel="stylesheet" href="newprodcut.css">
-  <link rel="stylesheet" href="productmedia.css">
+  
   
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -61,6 +61,22 @@
       </div>
     </div>
   </section>
+   <!-- Additional Product Images Section -->
+<section class="product-gallery">
+  <div class="container">
+    <h2>More Product Images</h2>
+    <div class="gallery-container">
+      <div class="main-image">
+        <img src="im/New folder/brewtea-2.jpg" alt="Main Chamomile Tea Image" id="main-gallery-image" loading="lazy">
+      </div>
+      <div class="thumbnail-container">
+        <img src="im/New folder/brewtea-2.jpg" alt="Chamomile Tea Image 1" class="thumbnail" data-large="im/New folder/chamomile1.jpg" loading="lazy">
+        <img src="im/New folder/brewtea-2.jpg" alt="Chamomile Tea Image 2" class="thumbnail" data-large="im/New folder/chamomile2.jpg" loading="lazy">
+        <img src="im/New folder/brewtea-2.jpg" alt="Chamomile Tea Image 3" class="thumbnail" data-large="im/New folder/chamomile3.jpg" loading="lazy">
+      </div>
+    </div>
+  </div>
+</section>
 
   <!-- Footer -->
   <footer>
