--- a/flowertea.html
+++ b/flowertea.html
@@ -38,7 +38,7 @@
     <div class="container">
       <div class="product-detail-card">
         <div class="product-image">
-          <img src="im/New folder/a.jpg" alt="Tranquil Flower Tea" loading="lazy">
+          <img src="im/New folder/rosemary.jpg" alt="Tranquil Flower Tea" loading="lazy">
         </div>
         <div class="product-content" data-id="1" data-name="Tranquil Flower Tea">
           <h2>Tranquil Flower Tea</h2>
@@ -59,6 +59,22 @@
       </div>
     </div>
   </section>
+   <!-- Additional Product Images Section -->
+<section class="product-gallery">
+  <div class="container">
+    <h2>More Product Images</h2>
+    <div class="gallery-container">
+      <div class="main-image">
+        <img src="im/New folder/rosemary-2.jpg" alt="Main Chamomile Tea Image" id="main-gallery-image" loading="lazy">
+      </div>
+      <div class="thumbnail-container">
+        <img src="im/New folder/chamomile-2.jpg" alt="Chamomile Tea Image 1" class="thumbnail" data-large="im/New folder/chamomile1.jpg" loading="lazy">
+        <img src="im/New folder/chamomile-2.jpg" alt="Chamomile Tea Image 2" class="thumbnail" data-large="im/New folder/chamomile2.jpg" loading="lazy">
+        <img src="im/New folder/chamomile-2.jpg" alt="Chamomile Tea Image 3" class="thumbnail" data-large="im/New folder/chamomile3.jpg" loading="lazy">
+      </div>
+    </div>
+  </div>
+</section>
 
   <!-- Footer -->
   <footer>
