--- a/honey.html
+++ b/honey.html
@@ -60,6 +60,22 @@
       </div>
     </div>
   </section>
+   <!-- Additional Product Images Section -->
+<section class="product-gallery">
+  <div class="container">
+    <h2>More Product Images</h2>
+    <div class="gallery-container">
+      <div class="main-image">
+        <img src="im/New folder/honey.jpg" alt="Main Chamomile Tea Image" id="main-gallery-image" loading="lazy">
+      </div>
+      <div class="thumbnail-container">
+        <img src="im/New folder/honey.jpg" alt="Chamomile Tea Image 1" class="thumbnail" data-large="im/New folder/chamomile1.jpg" loading="lazy">
+        <img src="im/New folder/honey.jpg" alt="Chamomile Tea Image 2" class="thumbnail" data-large="im/New folder/chamomile2.jpg" loading="lazy">
+        <img src="im/New folder/honey.jpg" alt="Chamomile Tea Image 3" class="thumbnail" data-large="im/New folder/chamomile3.jpg" loading="lazy">
+      </div>
+    </div>
+  </div>
+</section>
 
   <!-- Footer -->
   <footer>
