--- a/lemongrass.html
+++ b/lemongrass.html
@@ -56,12 +56,28 @@
           <h3>تفصیل (اردو)</h3>
           <p>لیموں گراس ایک تازگی بخش جڑی بوٹی ہے جو خوشبودار لیموں جیسی مہک رکھتی ہے۔ یہ نظامِ ہاضمہ بہتر بناتی ہے، بے چینی کو کم کرتی ہے اور قوت مدافعت بڑھاتی ہے۔
 
-۔</p>
+</p>
           <button class="add-to-cart" aria-label="Add Lemon Grass to cart">Add to Cart</button>
         </div>
       </div>
     </div>
   </section>
+   <!-- Additional Product Images Section -->
+<section class="product-gallery">
+  <div class="container">
+    <h2>More Product Images</h2>
+    <div class="gallery-container">
+      <div class="main-image">
+        <img src="im/New folder/lemon.jpg" alt="Main Chamomile Tea Image" id="main-gallery-image" loading="lazy">
+      </div>
+      <div class="thumbnail-container">
+        <img src="im/New folder/lemon-2.jpg" alt="Chamomile Tea Image 1" class="thumbnail" data-large="im/New folder/chamomile1.jpg" loading="lazy">
+        <img src="im/New folder/lemon-2.jpg" alt="Chamomile Tea Image 2" class="thumbnail" data-large="im/New folder/chamomile2.jpg" loading="lazy">
+        <img src="im/New folder/lemon-2.jpg" alt="Chamomile Tea Image 3" class="thumbnail" data-large="im/New folder/chamomile3.jpg" loading="lazy">
+      </div>
+    </div>
+  </div>
+</section>
 
   <!-- Footer -->
   <footer>
